syntax = "proto3";

package network.scorum.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "network/scorum/v1/params.proto";
import "network/scorum/v1/types.proto";

option go_package = "github.com/scorum/cosmos-network/x/scorum/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/scorum/params";
  }

  rpc ListWithdrawals(QueryWithdrawalsRequest) returns (QueryWithdrawalsResponse) {
    option (google.api.http).get = "/scorum/withdrawals";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryWithdrawalsRequest {
  string owner = 1;
}

message QueryWithdrawalsResponse {
  repeated SPWithdrawal withdrawals = 1 [(gogoproto.nullable) = false];
}